Fix align of Ask AI button

--- a/docusaurus/src/scss/custom-search-bar.scss
+++ b/docusaurus/src/scss/custom-search-bar.scss
@@ -133,6 +133,7 @@
       position: relative;
       font-size: var(--strapi-font-size-sm);
       line-height: var(--strapi-line-height-sm);
+      top: 1px;
 
       i {
         margin-right: 6px;
